// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgramDescription structural snapshot (the link map) > analytic-glass + pathtracer 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.8,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 12,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > analytic-minimal + pathtracer 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "color": [
      0.1,
      0.2,
      0.45,
    ],
    "intensity": 1,
    "type": "constant",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.8,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 8,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > cornell + cylindrical 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "hfov": 240,
      "type": "cylindrical",
    },
    "color": "rgb",
    "maxBounces": 10,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > cornell + equirect 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "type": "equirect",
    },
    "color": "rgb",
    "maxBounces": 10,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > cornell + fisheye-equidistant 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 3.141592653589793,
      "projection": "equidistant",
      "type": "fisheye",
    },
    "color": "rgb",
    "maxBounces": 10,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > cornell + orthographic 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "scale": 1.6,
      "type": "orthographic",
    },
    "color": "rgb",
    "maxBounces": 10,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > cornell + pathtracer 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.8,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 10,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > cornell + thinlens 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "aperture": 0.15,
      "focusDistance": 4,
      "fov": {
        "default": 0.8,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "thinlens",
    },
    "color": "rgb",
    "maxBounces": 10,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > cornell-area + pt 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": true,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.8,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 10,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > cornell-area + pt-mis 1`] = `
{
  "emitters": {
    "lightingPdf": true,
    "samplable": true,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "mis",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.8,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 10,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > cornell-area + pt-nee 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": true,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.8,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 10,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > cornell-area-glass + pt 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": true,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.8,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 10,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > cornell-area-glass + pt-mis 1`] = `
{
  "emitters": {
    "lightingPdf": true,
    "samplable": true,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "mis",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.8,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 10,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > cornell-area-glass + pt-nee 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": true,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.8,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 10,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > cornell-fisheye + fisheye-equidistant 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 3.141592653589793,
      "projection": "equidistant",
      "type": "fisheye",
    },
    "color": "rgb",
    "maxBounces": 10,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > cornell-fisheye + fisheye-equisolid 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 3.141592653589793,
      "projection": "equisolid",
      "type": "fisheye",
    },
    "color": "rgb",
    "maxBounces": 10,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > cornell-fisheye + fisheye-orthographic 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 3.141592653589793,
      "projection": "orthographic",
      "type": "fisheye",
    },
    "color": "rgb",
    "maxBounces": 10,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > cornell-fisheye + fisheye-stereographic 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 3.141592653589793,
      "projection": "stereographic",
      "type": "fisheye",
    },
    "color": "rgb",
    "maxBounces": 10,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > cornell-glass + pathtracer 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.8,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 12,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > cornell-oneshot + oneshot 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "oneshot",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.8,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 8,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > eta + pathtracer 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": null,
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.6,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 4,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > fog-area + pt 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": true,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "analytic",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.8,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 16,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [
      "hg",
    ],
    "nullInterfaces": true,
    "present": true,
    "scatteringArms": true,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > fog-area + pt-mis 1`] = `
{
  "emitters": {
    "lightingPdf": true,
    "samplable": true,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "mis",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "analytic",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.8,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 16,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [
      "hg",
    ],
    "nullInterfaces": true,
    "present": true,
    "scatteringArms": true,
    "shadowWalker": true,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > fog-area + pt-nee 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": true,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "analytic",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.8,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 16,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [
      "hg",
    ],
    "nullInterfaces": true,
    "present": true,
    "scatteringArms": true,
    "shadowWalker": true,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > fog-panel + pt 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": true,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "analytic",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.8,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 16,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [
      "hg",
    ],
    "nullInterfaces": true,
    "present": true,
    "scatteringArms": true,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > fog-panel + pt-nee 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": true,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "analytic",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.8,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 16,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [
      "hg",
    ],
    "nullInterfaces": true,
    "present": true,
    "scatteringArms": true,
    "shadowWalker": true,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > fogcube + pathtracer 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": null,
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.8,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": true,
    "present": true,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > furnace + furnace 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": null,
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 1,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 16,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > furnace + furnace-var 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "variance",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": null,
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 1,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 16,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > furnace-scatter + furnace-scatter 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": null,
    "volumeSampling": "analytic",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 1,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 48,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [
      "hg",
    ],
    "nullInterfaces": true,
    "present": true,
    "scatteringArms": true,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > furnace-sky + pt 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "color": [
      1,
      1,
      1,
    ],
    "intensity": 1,
    "sampleAsLight": true,
    "type": "constant",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": null,
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.8,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 32,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "type": "none",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > furnace-sky + pt-mis 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "color": [
      1,
      1,
      1,
    ],
    "intensity": 1,
    "sampleAsLight": true,
    "type": "constant",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "mis",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": null,
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.8,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 32,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "type": "none",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > furnace-sky + pt-nee 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "color": [
      1,
      1,
      1,
    ],
    "intensity": 1,
    "sampleAsLight": true,
    "type": "constant",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": null,
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.8,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 32,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "type": "none",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > haze + pt 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 4,
    },
    "volumeSampling": "analytic",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.9,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 24,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [
      "hg",
    ],
    "nullInterfaces": true,
    "present": true,
    "scatteringArms": true,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > haze + pt-nee 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 4,
    },
    "volumeSampling": "analytic",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.9,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 24,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [
      "hg",
    ],
    "nullInterfaces": true,
    "present": true,
    "scatteringArms": true,
    "shadowWalker": true,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > haze + pt-nee-eq 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "equiangular",
    "russianRoulette": {
      "startDepth": 4,
    },
    "volumeSampling": "analytic",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.9,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 24,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [
      "hg",
    ],
    "nullInterfaces": true,
    "present": true,
    "scatteringArms": true,
    "shadowWalker": true,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > marble + pt 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "color": [
      0.05,
      0.055,
      0.075,
    ],
    "intensity": 1,
    "type": "constant",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 4,
    },
    "volumeSampling": "analytic",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.7,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 32,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [
      "hg",
    ],
    "nullInterfaces": false,
    "present": true,
    "scatteringArms": true,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > marble + pt-noscatter 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "color": [
      0.05,
      0.055,
      0.075,
    ],
    "intensity": 1,
    "type": "constant",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 4,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.7,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 32,
    "response": "radiance",
    "scattering": "ignored",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": true,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > minimal + direct 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "color": [
      0.1,
      0.2,
      0.45,
    ],
    "intensity": 1,
    "type": "constant",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": null,
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.8,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 1,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > minimal + pathtracer 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "color": [
      0.1,
      0.2,
      0.45,
    ],
    "intensity": 1,
    "type": "constant",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.8,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 8,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > mist + pt-nee 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "color": [
      0.42,
      0.52,
      0.68,
    ],
    "intensity": 1,
    "type": "constant",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "analytic",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 1,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 12,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [
      "hg",
    ],
    "nullInterfaces": true,
    "present": true,
    "scatteringArms": true,
    "shadowWalker": true,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > mixed + pathtracer 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "color": [
      0.08,
      0.12,
      0.2,
    ],
    "intensity": 1,
    "type": "constant",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.8,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 8,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > orb + pt 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": true,
  },
  "environment": {
    "color": [
      0.03,
      0.035,
      0.05,
    ],
    "intensity": 1,
    "type": "constant",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.8,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 12,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > orb + pt-nee 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": true,
  },
  "environment": {
    "color": [
      0.03,
      0.035,
      0.05,
    ],
    "intensity": 1,
    "type": "constant",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.8,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 12,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > proc-sky + pt 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "glsl": {
      "kind": "glsl",
      "source": "mix(vec3(0.06, 0.08, 0.12), vec3(0.35, 0.45, 0.65), 0.5 * (dir.y + 1.0)) + vec3(18.0, 16.0, 13.0) * smoothstep(0.9994, 0.9999, dot(dir, normalize(vec3(0.4, 0.35, 0.2))))",
    },
    "intensity": 1,
    "rotation": 0,
    "type": "procedural",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.9,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > proc-sky + pt-mis 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "glsl": {
      "kind": "glsl",
      "source": "mix(vec3(0.06, 0.08, 0.12), vec3(0.35, 0.45, 0.65), 0.5 * (dir.y + 1.0)) + vec3(18.0, 16.0, 13.0) * smoothstep(0.9994, 0.9999, dot(dir, normalize(vec3(0.4, 0.35, 0.2))))",
    },
    "intensity": 1,
    "rotation": 0,
    "type": "procedural",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "mis",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.9,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > proc-sky + pt-mis-comp 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "glsl": {
      "kind": "glsl",
      "source": "mix(vec3(0.06, 0.08, 0.12), vec3(0.35, 0.45, 0.65), 0.5 * (dir.y + 1.0)) + vec3(18.0, 16.0, 13.0) * smoothstep(0.9994, 0.9999, dot(dir, normalize(vec3(0.4, 0.35, 0.2))))",
    },
    "intensity": 1,
    "rotation": 0,
    "type": "procedural",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": true,
    },
    "lighting": {
      "method": "mis",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.9,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > proc-sky + pt-nee 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "glsl": {
      "kind": "glsl",
      "source": "mix(vec3(0.06, 0.08, 0.12), vec3(0.35, 0.45, 0.65), 0.5 * (dir.y + 1.0)) + vec3(18.0, 16.0, 13.0) * smoothstep(0.9994, 0.9999, dot(dir, normalize(vec3(0.4, 0.35, 0.2))))",
    },
    "intensity": 1,
    "rotation": 0,
    "type": "procedural",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.9,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > rayleigh + pathtracer 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 4,
    },
    "volumeSampling": "analytic",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.8,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 8,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [
      "hg",
      "rayleigh",
    ],
    "nullInterfaces": true,
    "present": true,
    "scatteringArms": true,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > sky + pt 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "intensity": 1,
    "rotation": 0,
    "type": "image",
    "url": "/hdri/table_mountain_2_puresky_1k.hdr",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.9,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > sky + pt-mis 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "intensity": 1,
    "rotation": 0,
    "type": "image",
    "url": "/hdri/table_mountain_2_puresky_1k.hdr",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "mis",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.9,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > sky + pt-mis-oct 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "intensity": 1,
    "rotation": 0,
    "type": "image",
    "url": "/hdri/table_mountain_2_puresky_1k.hdr",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "octahedral",
      "compensation": false,
    },
    "lighting": {
      "method": "mis",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.9,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > sky + pt-nee 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "intensity": 1,
    "rotation": 0,
    "type": "image",
    "url": "/hdri/table_mountain_2_puresky_1k.hdr",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.9,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > sky-lamp + pt 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": true,
  },
  "environment": {
    "intensity": 1,
    "rotation": 0,
    "type": "image",
    "url": "/hdri/table_mountain_2_puresky_1k.hdr",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.9,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > sky-lamp + pt-mis 1`] = `
{
  "emitters": {
    "lightingPdf": true,
    "samplable": true,
  },
  "environment": {
    "intensity": 1,
    "rotation": 0,
    "type": "image",
    "url": "/hdri/table_mountain_2_puresky_1k.hdr",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "mis",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.9,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > sky-lamp + pt-nee 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": true,
  },
  "environment": {
    "intensity": 1,
    "rotation": 0,
    "type": "image",
    "url": "/hdri/table_mountain_2_puresky_1k.hdr",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.9,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > slab + pathtracer 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": null,
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.6,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 4,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": true,
    "present": true,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > submerged + pathtracer 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": null,
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.7,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 12,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > thinlens-zero + pathtracer 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.8,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 10,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > thinlens-zero + thinlens0 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "aperture": 0,
      "focusDistance": 4,
      "fov": 0.8,
      "type": "thinlens",
    },
    "color": "rgb",
    "maxBounces": 10,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > tonemap + aces 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "intensity": 1,
    "rotation": 0,
    "type": "image",
    "url": "/hdri/table_mountain_2_puresky_1k.hdr",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "mis",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.9,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "aces",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > tonemap + agx 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "intensity": 1,
    "rotation": 0,
    "type": "image",
    "url": "/hdri/table_mountain_2_puresky_1k.hdr",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "mis",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.9,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "agx",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > tonemap + gt 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "intensity": 1,
    "rotation": 0,
    "type": "image",
    "url": "/hdri/table_mountain_2_puresky_1k.hdr",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "mis",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.9,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "gt",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > tonemap + hable 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "intensity": 1,
    "rotation": 0,
    "type": "image",
    "url": "/hdri/table_mountain_2_puresky_1k.hdr",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "mis",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.9,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "hable",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > tonemap + khronos 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "intensity": 1,
    "rotation": 0,
    "type": "image",
    "url": "/hdri/table_mountain_2_puresky_1k.hdr",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "mis",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.9,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "khronos",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > tonemap + none 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "intensity": 1,
    "rotation": 0,
    "type": "image",
    "url": "/hdri/table_mountain_2_puresky_1k.hdr",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "mis",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.9,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "type": "none",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > tonemap + reinhard 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "intensity": 1,
    "rotation": 0,
    "type": "image",
    "url": "/hdri/table_mountain_2_puresky_1k.hdr",
  },
  "environmentSamplable": true,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "mis",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "dielectric",
    ],
  },
  "measurement": {
    "camera": {
      "fov": {
        "default": 0.9,
        "max": 1.5,
        "min": 0.3,
        "param": "camera.fov",
      },
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > two-light + power 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": null,
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.9,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > two-light + uniform 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": false,
  },
  "environment": {
    "type": "none",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "uniform",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": null,
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.9,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > veach-mis + pt 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": true,
  },
  "environment": {
    "color": [
      0.015,
      0.015,
      0.02,
    ],
    "intensity": 1,
    "type": "constant",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": null,
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "ggx",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.8,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > veach-mis + pt-mis 1`] = `
{
  "emitters": {
    "lightingPdf": true,
    "samplable": true,
  },
  "environment": {
    "color": [
      0.015,
      0.015,
      0.02,
    ],
    "intensity": 1,
    "type": "constant",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "mis",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "ggx",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.8,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;

exports[`ProgramDescription structural snapshot (the link map) > veach-mis + pt-nee 1`] = `
{
  "emitters": {
    "lightingPdf": false,
    "samplable": true,
  },
  "environment": {
    "color": [
      0.015,
      0.015,
      0.02,
    ],
    "intensity": 1,
    "type": "constant",
  },
  "environmentSamplable": false,
  "estimator": {
    "accumulation": {
      "type": "average",
    },
    "envSampler": {
      "chart": "equirect",
      "compensation": false,
    },
    "lighting": {
      "method": "nee",
      "selection": "power",
    },
    "mediumLightSampling": "vertex",
    "russianRoulette": {
      "startDepth": 3,
    },
    "volumeSampling": "none",
  },
  "intersection": {
    "method": "raymarch",
  },
  "materials": {
    "models": [
      "lambert",
      "ggx",
    ],
  },
  "measurement": {
    "camera": {
      "fov": 0.8,
      "type": "pinhole",
    },
    "color": "rgb",
    "maxBounces": 6,
    "response": "radiance",
    "scattering": "full",
    "shadows": "opaque-dielectrics",
  },
  "media": {
    "models": [],
    "nullInterfaces": false,
    "present": false,
    "scatteringArms": false,
    "shadowWalker": false,
  },
  "view": {
    "tonemap": {
      "exposure": undefined,
      "type": "reinhard",
    },
  },
}
`;
